Update image source for pause and play button in episode details

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           risus. Ligula ultricies suscipit justo vitae turpis lacus
         </p>
         <div class="down">
-          <img src="./images/pauseR.png" alt="" />
+          <img src="./images/pause and play button.png" alt="" />
           <div class="down-middle">
             <h2>Episode 1. Season 2</h2>
             <p>Duration, 12:56</p>
